--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <section id="html">
       <h2>I am ready to learn html</h2>
       <p>This is my first paragraph.</p>
+
+      <img src="img/html5.png" alt="HTML5 Logo" />
+
       <ol>
         <li>This is a quite intersting joutney</li>
         <li>This is a quite intersting joutney</li>
