adding some images

--- a/index.html
+++ b/index.html
@@ -26,8 +26,13 @@
     <section id="html">
       <h2>I am ready to learn html</h2>
       <p>This is my first paragraph.</p>
-
-      <img src="img/html5.png" alt="HTML5 Logo" />
+      <img
+        src="img/html5.png"
+        alt="HTML5 Logo"
+        title="I am Learning HTML"
+        width="20"
+        height="24"
+      />
 
       <ol>
         <li>This is a quite intersting joutney</li>
@@ -53,20 +58,40 @@
     <section id="vacation">
       <h2>I Am Plannig to go in a vacation</h2>
       <h3>Places I like to visit</h3>
+
       <ul>
         <li>
           <p>I've heard good things about the carribean</p>
         </li>
+        <h3>Places I want to visit:</h3>
+        <li>
+          <p>I've heard good things about the Carribean Beach</p>
+          <figure>
+            <img
+              src="img/html5.png"
+              alt="Carribean image"
+              title="Iwant to visit Carribean beach"
+              width="24"
+              height="24"
+              loading="lazy"
+            />
+            <figcaption>Carribean Beach Getaway</figcaption>
+          </figure>
+        </li>
+
         <li>
           <p>I've heard good things about going here:</p>
-          <!--TODO: Add more places-->
           <address>
-            Silicon Vally bay area <br />
-            Mixico City
+            Margaritaville Island Reserve Riviera Cancun<br />
+            Bahia Petempich Puerto Morelos, Mexico 77580
           </address>
+          <img
+            src="img/html5.png"
+            alt="Cancun vacation"
+            title="It's 5 O'clock somewhere!"
+          />
         </li>
       </ul>
-      <h3>Places I want to visit:</h3>
       <dl>
         <dt>North Pole</dt>
         <dd>I hear this is <strong>cold</strong>!</dd>
