fixes some errors and warnings

--- a/about.html
+++ b/about.html
@@ -1,44 +1,53 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta name="author" content="Muwaffaq Elbadawi" />
-    <meta name="description" content="This is the about page" />
-    <title>About</title>
-    <link rel="icon" href="icons/html5.png" type="image/x-icon" />
-    <link rel="stylesheet" href="main.css" type="text/css" />
-    <body>
-      <h1>Hi, I'm Dave Gray</h1>
-      <hr />
+<html lang="en">
 
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-        adipisci nisi eius quae soluta reiciendis harum, vitae et enim? Dolorum
-        placeat impedit nobis aperiam necessitatibus consectetur? Culpa quisquam
-        consequuntur doloribus!
-      </p>
+<head>
+  <meta charset="UTF-8">
+  <meta name="author" content="Muwaffaq Elbadawi">
+  <meta name="description" content="This is the about page">
+  <title>About</title>
+  <link rel="icon" href="icons/html5.png" type="image/x-icon">
+  <link rel="stylesheet" href="main.css" type="text/css">
+</head>
 
-      <br />
+<body>
+  <h1>Hi, I'm Muwaffaq Elbadawi</h1>
+  <hr>
 
-      <ul>
-        <li>
-          Download an <a href="icons/html5.png" download>HTML5 fav icon</a>
-        </li>
-        <li>
-          Contact me <a href="mailto:random@email.com">My email address</a>.
-        </li>
-        <li>Dial <a href="tel:+1234567890">My phone number</a>.</li>
-        <li>
-          Open <a href="https://www.google.com" target="_blank">Google</a> in a
-          new tab
-        </li>
-      </ul>
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+    adipisci nisi eius quae soluta reiciendis harum, vitae et enim? Dolorum
+    placeat impedit nobis aperiam necessitatibus consectetur? Culpa quisquam
+    consequuntur doloribus!
+  </p>
 
-      <hr />
-      &lt;&lt;&lt;&copy;<a href="about.html">Muwaffaq Elbadawi</a>&gt;&gt;&gt;
+  <br>
 
-      <p>
-        <a href="/">Back to Home</a>
-      </p>
-    </body>
-  </head>
+  <ul>
+    <li>
+      Download an <a href="icons/html5.png" download>HTML5 fav icon</a>
+    </li>
+    <li>
+      Contact me <a href="mailto:random@email.com">My email address</a>.
+    </li>
+    <li>Dial <a href="tel:+1234567890">My phone number</a>.</li>
+    <li>
+      Open <a href="https://www.google.com" target="_blank">Google</a> in a
+      new tab
+    </li>
+  </ul>
+
+  <hr>
+
+  <p>
+    &lt;&lt;&lt;&copy;<a href="about.html">Muwaffaq Elbadawi</a>&gt;&gt;&gt;
+  </p>
+
+  <p>
+    <a href="/">Back to Home</a>
+  </p>
+
+
+</body>
+
 </html>
