--- a/index.html
+++ b/index.html
@@ -18,18 +18,12 @@
         <li>
           <a href="#html">Learning HTML</a>
         </li>
-
-
         <li>
           <a href="#vacation">Planning a vacation</a>
         </li>
-
-
         <li>
           <a href="#contact">Contact Me</a>
         </li>
-
-
       </ul>
     </nav>
   </header>
@@ -86,6 +80,7 @@
               <th scope="col">Activity</th>
             </tr>
           </thead>
+
           <tbody>
             <tr>
               <th scope="row">Morning</th>
@@ -120,8 +115,9 @@
               <th scope="row">Night</th>
               <td>Sleep</td>
             </tr>
-
           </tbody>
+
+
           <tfoot>
             <tr>
               <td colspan="3">And that what I do everyday, 5 days a week just eat, sleep, code, ..and recharge!</td>
@@ -213,7 +209,7 @@
 
           <p>
             <label for="decade">Favorite Decade:</label>
-            <input type="number" min="1950" max="2020" step="10" value="1980">
+            <input type="number" name="decade" id="decade" min="1950" max="2020" step="10" value="1980">
           </p>
 
           <p>
@@ -287,15 +283,20 @@
             <label for="otherPet">Other</label>
           </p>
         </fieldset>
+        
         <br>
+
         <fieldset>
           <legend>Send Me A Note</legend>
+
           <label for="message">Your Message:</label>
+
           <br>
           <textarea name="message" id="message" cols="30" rows="10" placeholder="Type your message here"></textarea>
         </fieldset>
         <br>
         <button type="submit">Submit</button>
+        <button type="submit" formaction="https://httpbin.org/post" formmethod="post">Post</button>
         <button type="reset">Reset</button>
       </form>
     </article>
